--- a/news.html
+++ b/news.html
@@ -20,10 +20,30 @@
 </head>
 <body>
 
-<?php
-include "include/modals/header.php"
+<header>
+    <div class="block">
+        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="/assets/img/advCar.png" alt="">
+    </div>
+</header>
 
-?>
+<div class="headS d-flex">
+    <div class="container">
+        <div class="headContent d-flex align-items-center  justify-content-between">
+            <p class="versionLink">Логотип</p>
+            <div class="travel">
+                <a class="travelLink" href="">
+                    <img class="rybbuImg" src="/assets/img/mr321_03.png" alt="">
+                </a>
+                <h1 class="travelHeader">Путешествуй за 30 тыс. рублей</h1>
+                <p class="travelText">Ранее бронирование только у нас! <a class="otLink circleLink" href="/">подробнее</a></p>
+            </div>
+            <a class="versionLink glasses" href="/">Версия для слабовидящих</a>
+            <a class="versionLink sign search" href="/">Вход</a>
+        </div>
+    </div>
+</div>
 
 <div class="headL d-flex align-items-center position-relative">
     <div class="container d-flex justify-content-between align-items-center position-relative">
@@ -818,10 +838,71 @@ include "include/modals/header.php"
     </div>
 </div>
 
-<?php
-include "include/modals/footer.php";
-?>
+<footer>
+    <div class="container">
+        <div class="blocks d-flex">
+            <div class="left col-xl-3"></div>
+            <div class="footerContent col-xl-9 col-lg-9 col-md-9 col-sm-12 d-flex">
+                <div class="footerLinksParent pt-0">
+                    <div class="footerText">
+                        <p>Воткинск.NET - информационно-развлекательный портал
+                            Размещение рекламы круглосуточно: +7 (912) 441-01-25 | +7 (34145) 5-99-75
+                            Портал не несет ответственности за достоверность информации,
+                            содержащейся в рекламных объявлениях.
+                            Портал не предоставляет справочной информации.
+                        </p>
+                    </div>
+                    <div class="footerImgParent">
 
+                        <img class="footerImg" src="/assets/img/footerImg.png" alt="">
+                    </div>
+                </div>
+
+
+                <div class="footerLinksParent">
+                    <div class="footerIconsParent">
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/fc.svg" alt="">
+                        </a>
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/tw.svg" alt="">
+                        </a>
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/vk.svg" alt="">
+                        </a>
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/od.svg" alt="">
+                        </a>
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/yt.svg" alt="">
+                        </a>
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/inst.svg" alt="">
+                        </a>
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/mail.svg" alt="">
+                        </a>
+                        <a class="footerIcons" href="/">
+                            <img src="/assets/img/social/footer/google.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="footerText footerRight">
+                        <p>2010-2016. Воткинск.NET - информационно-развлекательный портал
+                            Разработано в студии <a class="recordingAlllink" href="/">Web. Master. Studio.</a>
+                            Агенство креативных профессионалов</p>
+                    </div>
+                    <div class="footerLinks">
+                        <a class="footerLink" href="/">О портале</a>
+                        <a class="footerLink" href="/">Реклама</a>
+                        <a class="footerLink" href="/">Вакансии</a>
+                        <a class="footerLink mobIcon" href="/">Мобильная версия</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
