--- a/vtvMain.html
+++ b/vtvMain.html
@@ -20,10 +20,30 @@
 </head>
 <body>
 
-<?php
-include "include/modals/header.php"
-?>
+<header>
+    <div class="block">
+        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="/assets/img/advCar.png" alt="">
+        <img class="adv" src="/assets/img/advCar.png" alt="">
+    </div>
+</header>
 
+<div class="headS d-flex">
+    <div class="container">
+        <div class="headContent d-flex align-items-center  justify-content-between">
+            <p class="versionLink">Логотип</p>
+            <div class="travel">
+                <a class="travelLink" href="">
+                    <img class="rybbuImg" src="/assets/img/mr321_03.png" alt="">
+                </a>
+                <h1 class="travelHeader">Путешествуй за 30 тыс. рублей</h1>
+                <p class="travelText">Ранее бронирование только у нас! <a class="otLink circleLink" href="/">подробнее</a></p>
+            </div>
+            <a class="versionLink glasses" href="/">Версия для слабовидящих</a>
+            <a class="versionLink sign search" href="/">Вход</a>
+        </div>
+    </div>
+</div>
 <div class="headL d-flex align-items-center position-relative">
     <div class="container con d-flex justify-content-between align-items-center position-relative">
         <div class="cityParent map col-xl-3 col-lg-3 col-md-4">
